# model2data

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  advanced_features.dbml  ecommerce.dbml  hackernews.dbml  saas_platform.dbml
model2data/: cli.py
model2data/dbt/: project.py  tests.py
model2data/dbt/templates/: dbt_project.yml.jinja  profiles.yml.jinja
model2data/dbt/templates/macros/: generate_schema_name.sql
model2data/generate/: core.py  faker.py  relationships.py
model2data/parse/: dbml.py
tests/: test_cli.py  test_cli_smoke.py  test_coverage_gaps.py  test_dbml_parser.py  test_dbt_tests.py  test_generation.py
