[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model2data"
version = "0.1.1"
description = "Generate analytics-ready datasets from DBML models"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dbt-core>=1.5.0",
    "dbt-duckdb>=1.5.0",
    "faker>=37.12.0",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff>=0.1.0",
  "ty>=0.0.1",
  "typos>=1.0.0",
  "poethepoet>=0.24.0",
  "pre-commit>=3.0.0",
]

[project.scripts]
model2data = "model2data.cli:app"

[tool.setuptools.packages.find]
include = ["model2data"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["model2data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# Typos configuration - use .typos.toml or command-line args
# typos doesn't support pyproject.toml config in the same way

[tool.ty]
python_version = "3.10"
include = ["model2data"]
exclude = ["tests", "*.egg-info"]

[tool.poe.tasks]
# Linting tasks
lint = "ruff check ."
format = "ruff format ."
typos = "typos"
typecheck = "ty check"

# Combined tasks
check = ["lint", "typecheck", "typos"]
fix = ["format", "lint --fix", "typos --write"]

# Test tasks
test = "pytest"
test-cov = "pytest --cov=model2data --cov-report=term-missing"

# All checks
all = ["check", "test"]
